--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rumqttc = "0.7.0" # 0.8.0 is broken, so we use 0.7.0 for now
 rppal = "0.12.0"
 
 [dev-dependencies.cargo-husky]
+cargo-release = "0.17.1"
 version = "1"
 default-features = false
 features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
