--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,10 @@ serde_json = "1"
 rumqttc = "0.7.0" # 0.8.0 is broken, so we use 0.7.0 for now
 rppal = "0.12.0"
 
-[dev-dependencies.cargo-husky]
+[dev-dependencies]
 cargo-release = "0.17.1"
+
+[dev-dependencies.cargo-husky]
 version = "1"
 default-features = false
 features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
