chore: adds CHANGELOG.md

--- a/release.toml
+++ b/release.toml
@@ -5,3 +5,6 @@ no-dev-version = true
 consolidate-pushes = true
 consolidate-commits = true
 allow-branch = ["main"]
+pre-release-replacements = [
+	{ file="CHANGELOG.md", search="[unreleased]", replace="[{{version}}]" }
+]
