--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,7 +16,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/94549?v=4",
       "profile": "https://graysonarts.com/",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     }
   ],
