--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly
+          target: armv7-unknown-linux-gnueabihf
           override: true
           components: rustfmt
 
@@ -47,6 +48,7 @@ jobs:
         with:
           profile: minimal
           toolchain: ${{ matrix.rust }}
+          target: armv7-unknown-linux-gnueabihf
           override: true
 
       - name: Run cargo check
@@ -72,6 +74,7 @@ jobs:
         with:
           profile: minimal
           toolchain: ${{ matrix.rust }}
+          target: armv7-unknown-linux-gnueabihf
           override: true
           components: clippy
 
